Added several changes

--- a/addressBook2.html
+++ b/addressBook2.html
@@ -70,75 +70,18 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-md-9" style="background: white; margin-top: 20px; padding: 20px; border: 1px solid #d9d9d9"> 
+                <div class="col-md-9" style="background: white; margin-top: 20px; padding: 40px; border: 1px solid #d9d9d9; height: 450px"> 
                     <div class="row">
-                        <div class="col-md-1">
-                            <b>1</b>
+                        <div class="col-md-6">
+                            <b style="color: #afafaf">Delivery Address(3)</b>
                         </div>
-                        <div class="col-md-8">
-                            <address>
-                                205, Azikiwe Street<br>
-                                Off Benjack Bus-stop, By Mobil Filling Station<br>
-                                Diobu, Port Harcourt<br>
-                                Rivers State.
-                            </address>
-                        </div>
-                        <div class="col-md-2">
-                            0809 123 4567
-                        </div>
-                        <div class="col-md-1">
-                              <button type="button" class="close" data-dismiss="row"><span aria-hidden="true">&times;</span</button>
+                        <div class="col-md-6">
+                            <b style="color: #afafaf">Phone</b>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-9" style="background: white; margin-top: 20px; padding: 20px; border: 1px solid #d9d9d9"> 
-                    <div class="row">
-                        <div class="col-md-1">
-                            <b>2</b>
-                        </div>
-                        <div class="col-md-8">
-                            <address>
-                                Al-Hassan Mungonu Cst.<br>
-                                GRA Phase 3, Port Harcourt<br>
-                                Rivers State.
-                            </address>
-                        </div>
-                        <div class="col-md-2">
-                            0809 123 4567
-                        </div>
-                        <div class="col-md-1">
-                              <button type="button" class="close" data-dismiss="row"><span aria-hidden="true">&times;</span</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-9" style="background: white; margin-top: 20px; padding: 20px; border: 1px solid #d9d9d9"> 
-                    <div class="row">
-                        <div class="col-md-1">
-                            <b>3</b>
-                        </div>
-                        <div class="col-md-8">
-                            <address>
-                                Along Baptist High School,<br>
-                                Near Amausa Onion Market<br>
-                                Control, Oyigbo<br>
-                                Rivers State.
-                            </address>
-                        </div>
-                        <div class="col-md-2">
-                            0809 123 4567
-                        </div>
-                        <div class="col-md-1">
-                              <button type="button" class="close" data-dismiss="row"><span aria-hidden="true">&times;</span</button>
+                    <div class="row" style="border: 1px solid #afafaf; height: 200px; padding: 30px">
+                        <div class="col-md-12 text-center">
+                            <i style="color: #a8a8a8">You have not added any delivery yet</i>
                         </div>
                     </div>
                 </div>
