--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
     </section>
     <div class="container text-right" style="margin-top: 40px;">
         <ul class="list-inline" style=" margin-right: 40px">
-            <li><a href=""><span class="fa fa-arrow-circle-left fa-4x" style="font-size: 20px"></span></a></li>
-            <li><a href=""><span class="fa fa-arrow-circle-right fa-4x" style="font-size: 20px"></span></a></li>
+            <li><img src="mabiri-icon-pack/arrow-circled-left.svg" height="30" width="30"></li>
+                    <li><img src="mabiri-icon-pack/arrow-circled-right.svg" height="30" width="30"></li>
         </ul>
     </div>
     <section id="ndahd" style="margin-top: 40px; padding: 30px">
@@ -213,8 +213,8 @@
             </div>
             <div class="container text-right" style="margin-top: 40px">
                 <ul class="list-inline" style="margin-right: 40px">
-                    <li><a href=""><span class="fa fa-arrow-circle-left fa-4x" style="font-size: 20px"></span></a></li>
-                    <li><a href=""><span class="fa fa-arrow-circle-right fa-4x" style="font-size: 20px"></span></a></li>
+                    <li><img src="mabiri-icon-pack/arrow-circled-left.svg" height="30" width="30"></li>
+                    <li><img src="mabiri-icon-pack/arrow-circled-right.svg" height="30" width="30"></li>
                 </ul>
             </div>
             <div class="another" style="margin-top: 70px">
@@ -258,7 +258,7 @@
                             <h4 style="font-weight: bolder"><b>404</b></h4><br>
                         </div>
                         <div class="text-right">
-                            <span class="fa fa-plus-square" style="color: #6d6d6d; margin-right: 30px; font-size: 20px; margin-top: -15px"></span>
+                            <img src="mabiri-icon-pack/add-to-cart.svg" height="30" width="30">
                         </div>
                     </div>
                     <div class="col-md-3 boo">
