--- a/login.html
+++ b/login.html
@@ -52,11 +52,11 @@
                     <input class="form-control" type="password" placeholder="Password"><br>
                     <a href="" class="btn btn-sign"><b>Log in</b></a><br><br>
                     <div class="row">
-                        <div class="col-md-3 text-left">
+                        <div class="col-md-4 text-left">
                             <input type="checkbox"> Remember me
                         </div>
-                        <div class="col-md-6">
-                            <a href="" style="color:red"><b>Get new password</b></a><br><br><br>
+                        <div class="col-md-8 text-right">
+                            <a href="" style="color:red"><b> Get new password</b></a><br><br><br>
                         </div>
                     </div>
                     <div class="row">
